--- a/苏联国民经济计划学02.md
+++ b/苏联国民经济计划学02.md
@@ -1,14 +1,18 @@
-### 苏联国民经济计划学（二）
+苏联国民经济计划学（二）
 
-# 第一篇——苏联经济和社会发展计划的理论、方法和组织
+<center># 第一篇</center>
+
+<center># 苏联经济和社会发展计划的理论、方法和组织</center>
+
+<center>## 第一章</center>
+
+<center>## 苏联经济和社会发展计划理论的研究对象</center>
 
  
 
-## 第一章——苏联经济和社会发展计划理论的研究对象
+<center>### 第一节</center>
 
- 
-
-### 第一节——国民经济计划工作是社会主义社会管理体系的中心环节
+<center>### 国民经济计划工作是社会主义社会管理体系的中心环节</center>
 
 我们党和我国政府历来认为，国民经济计划是社会主义经济和文化顺利发展的最重要的因素，是同全国各族人民密切相关的大事。计划工作的基本思想和基本原则都是由列宁制定的。
     
