--- a/苏联国民经济计划学03.md
+++ b/苏联国民经济计划学03.md
@@ -1,9 +1,9 @@
 苏联国民经济计划学（二）
 
 
-<center>### 第二节</center>
+### 第二节
 
-<center>#### 在资本主义制度下对国民经济进行计划是不可能的</center>
+#### 在资本主义制度下对国民经济进行计划是不可能的
 
  
 
