--- a/苏联国民经济计划学01.md
+++ b/苏联国民经济计划学01.md
@@ -1,24 +1,24 @@
-# 苏联国民经济计划学（一）
+<p align="right">苏联国民经济计划学（一）</p>
 
-# 苏联国民经济计划学
+# <p align="center">苏联国民经济计划学
 
-【苏】М·З·鲍尔  Г·В·鲁金娜  主编
+<p align="center">【苏】М·З·鲍尔  Г·В·鲁金娜  主编
 
-翻译    尤艳琴  惠周怀
+<p align="center">翻译    尤艳琴  惠周怀
 
-校订    刘晓    郑友敬  胡乃武
-
- 
-
-本书经苏联高等和中等专业教育部审定为高等院校经济专业教科书
-
-出版于1980年
-
-翻译于1982年
+<p align="center">校订    刘晓    郑友敬  胡乃武
 
  
 
-# 前言
+<p align="center">本书经苏联高等和中等专业教育部审定为高等院校经济专业教科书
+
+<p align="center">出版于1980年
+
+<p align="center">翻译于1982年
+
+ 
+
+# <p align="center">前言
 
 计划工作是社会主义制度下经济和社会发展管理系统的中心环节，是社会主义制度下一种特殊的社会实践形式，它的内容包括制定计划草案，论证计划任务的合理性，实现计划任务的可能性，检查计划的执行情况。
     
