--- a/苏联国民经济计划学03.md
+++ b/苏联国民经济计划学03.md
@@ -1,11 +1,8 @@
-苏联国民经济计划学（二）
+<p align="right">苏联国民经济计划学（二）
 
 
-### 第二节
+### <p align="center">第二节 在资本主义制度下对国民经济进行计划是不可能的
 
-#### 在资本主义制度下对国民经济进行计划是不可能的
-
- 
 
 对国民经济进行计划在当代世界上很流行。第二次世界大战前，只有个别资本主义国家在经济危机时期，才对计划感兴趣。
 
