--- a/markdown/苏联国民经济计划学01.md
+++ b/markdown/苏联国民经济计划学01.md
@@ -16,7 +16,7 @@
 
 <p align="center">翻译于1982年
 
- 
+<p align="center">特别鸣谢B站宝藏up主[team_alpha](https://www.bilibili.com/read/cv7675965)将本书转化为电子版。
 
 # <p align="center">前言
 
