--- a/markdown/苏联国民经济计划学01.md
+++ b/markdown/苏联国民经济计划学01.md
@@ -20,20 +20,20 @@
 
 # <p align="center">前言
 
-计划工作是社会主义制度下经济和社会发展管理系统的中心环节，是社会主义制度下一种特殊的社会实践形式，它的内容包括制定计划草案，论证计划任务的合理性，实现计划任务的可能性，检查计划的执行情况。
+&emsp;&emsp;计划工作是社会主义制度下经济和社会发展管理系统的中心环节，是社会主义制度下一种特殊的社会实践形式，它的内容包括制定计划草案，论证计划任务的合理性，实现计划任务的可能性，检查计划的执行情况。
     
-《苏联国民经济计划学》教程的研究课题是行为机制问题和如何运用社会主义社会发展的客观规律的问题，其目的是保证国民经济沿着共产主义建设的道路有计划地发展。
+&emsp;&emsp;《苏联国民经济计划学》教程的研究课题是行为机制问题和如何运用社会主义社会发展的客观规律的问题，其目的是保证国民经济沿着共产主义建设的道路有计划地发展。
     
-国民经济计划学是建立在运用经济和社会发展客观规律基础上的一门科学，具有系统的性质。在这个系统中社会主义基本经济规律起着决定性的作用，它体现在苏联经济和社会发展的国民经济计划的各个方面。
+&emsp;&emsp;国民经济计划学是建立在运用经济和社会发展客观规律基础上的一门科学，具有系统的性质。在这个系统中社会主义基本经济规律起着决定性的作用，它体现在苏联经济和社会发展的国民经济计划的各个方面。
     
-计划学以马克思列宁主义哲学和政治经济学一般理论为依据，同时，具有自己独特的方法论以及编制计划的统一逻辑、方法论原理、计划工作中的系统综合法和目标规划法、计划体系和计划指标体系、制定和论证最优计划的方法等等。
+&emsp;&emsp;计划学以马克思列宁主义哲学和政治经济学一般理论为依据，同时，具有自己独特的方法论以及编制计划的统一逻辑、方法论原理、计划工作中的系统综合法和目标规划法、计划体系和计划指标体系、制定和论证最优计划的方法等等。
     
-在编制和执行国民经济各部门、联合公司和企业的发展计划时，部门经济学家运用和发展了国民经济计划的方法论原理。
+&emsp;&emsp;在编制和执行国民经济各部门、联合公司和企业的发展计划时，部门经济学家运用和发展了国民经济计划的方法论原理。
     
-计划学作为建设共产主义社会的重要工具，是不断发展和完善的。正如苏共二十五大所指出的：完善计划工作，这是现阶段我国经济面临的关键问题之一。
+&emsp;&emsp;计划学作为建设共产主义社会的重要工具，是不断发展和完善的。正如苏共二十五大所指出的：完善计划工作，这是现阶段我国经济面临的关键问题之一。
     
-根据苏共二十五大和大会之后几次中央全会的决议，根据苏联宪法有关条款，苏共中央于1979年7月12日作出“关于进一步完善经济机制和党政机关的任务的决议”，苏共中央和苏联部长会议联合作出“关于改进计划工作和加强经济机制对提高生产效率和工作质量的影响的决议”。这个决议规定的一系列措施，是为了提高计划和管理水平，以大大提高社会生产效果，并在此基础上不断发展苏联经济，提高苏联人民的物质福利。
+&emsp;&emsp;根据苏共二十五大和大会之后几次中央全会的决议，根据苏联宪法有关条款，苏共中央于1979年7月12日作出“关于进一步完善经济机制和党政机关的任务的决议”，苏共中央和苏联部长会议联合作出“关于改进计划工作和加强经济机制对提高生产效率和工作质量的影响的决议”。这个决议规定的一系列措施，是为了提高计划和管理水平，以大大提高社会生产效果，并在此基础上不断发展苏联经济，提高苏联人民的物质福利。
     
-国民经济计划理论和实践的研究，对于培养各种专业的经济工作者占有特殊的地位。通过学习，他们将懂得，社会主义在苏联和其他社会主义国家的建立和胜利的全部历史，都是同经济和社会发展的科学管理以及计划工作紧密相联的。
+&emsp;&emsp;国民经济计划理论和实践的研究，对于培养各种专业的经济工作者占有特殊的地位。通过学习，他们将懂得，社会主义在苏联和其他社会主义国家的建立和胜利的全部历史，都是同经济和社会发展的科学管理以及计划工作紧密相联的。
     
-本书除论述计划学的原理之外，还帮助经济工作者掌握有关进行预测、制定规划的逻辑、原则、系统综合法、目标规划法，以及论证从企业、联合公司到部门和从行政区到整个国民经济各级计划的最优化方法。
+&emsp;&emsp;本书除论述计划学的原理之外，还帮助经济工作者掌握有关进行预测、制定规划的逻辑、原则、系统综合法、目标规划法，以及论证从企业、联合公司到部门和从行政区到整个国民经济各级计划的最优化方法。
