--- a/markdown/苏联国民经济计划学03.md
+++ b/markdown/苏联国民经济计划学03.md
@@ -1,39 +1,38 @@
 <p align="right">苏联国民经济计划学（三）
-
+    
 
 ### <p align="center">第二节 在资本主义制度下对国民经济进行计划是不可能的
-
-
-对国民经济进行计划在当代世界上很流行。第二次世界大战前，只有个别资本主义国家在经济危机时期，才对计划感兴趣。
-
-战后，随着帝国主义的殖民主义体系的垮台，亚洲和非洲出现了许多获得自由的国家，他们把计划工作看成加速经济、文化和社会发展的可靠手段。
-
-很多国家都建立了制定经济、文化中长期规划的全国性机关。发达的资本主义国家也对国家的经济进行规划。这一切都使这种所谓资本主义制度下能对国民经济进行计划的理论发展起来，包括“社会主义同资本主义接近”论、“调节的资本主义”论、“工业化后的社会”论以及其他等等，所有这些资产阶级计划的观点，都否认国民经济计划工作同主要生产资料的社会主义公有制、同社会主义国家的联系。
-
-提出这些观点的人，以发达的资本主义国家对经济的发展进行预测和规划为根据，试图证明，只要制定若干方法和模型系统，使用电子计算机，资产阶级国家在不改变所有制关系的情况下也完全可以对国民经济进行计划，将能够管理国家经济的发展。但是，试图证明在资本主义制度下可以实行计划的观点，在理论上是不能成立的，实践上是徒劳无益的。
-
-确实，在国家垄断资本主义条件下，在各发达的资本主义国家，由国家负担科学拨款以及原子能、反应堆技术和空间研究拨款的主要部分。运输、邮电、道路、能源供应、水的供应、下水道等的发展，在许多资本主义国家也完全掌握在国家手中。
-
-资本主义国家把税收政策作为影响生产结构和发展速度的工具。折旧政策，对固定资本投资实行减税的政策，信贷政策等也为这一目的服务。
-
-资产阶级国家对资本周转时间长的部门进行基本建设投资时，需要对这些投资进行长期计划。国家计划为政府和垄断资本家间建立业务上的联系奠定了基础。这些垄断资本家不但以有利的条件获得大量定货，而且获得很宝贵的经济情报，从中捞到不少好处。
-
-但是，资本主义国家努力干预经济，扩大国家调节的范围，并不能克服资本主义本质上的缺陷和矛盾。
-
-国家垄断资本主义的调节之所以是有限的，首先是因为建立在私有制基础之上的资本主义制度的本质没有改变。卡尔·马克思写道：“……资本主义经营本质上就是私人经营，即是由联合的资本家代替单个资本家，也是如此。”（《马克思恩格斯全集》第24卷（中文版），第272页）
-
-资产阶级国家影响经济的可能性是有限的。资产阶级国家可以刺激基本建设投资，可以使用劳动人民的部分收入以及通过税收和公债提出的部分闲置资本来购买商品，从而在一定限度内促进经济的发展、繁荣、生产结构的改变、新部门的出现，但是资产阶级国家绝不可能对经济的发展产生什么决定性的影响。
-
-国家垄断资本主义不能解决市场问题，在国家垄断资本主义条件下，生产和消费的对抗完全存在。调节和计划不能排除市场的自发性，也不能消除危机的经济基础。
-
-资本主义不能够对社会生产进行有计划的调节。正如马克思所强调指出的：“资产阶级社会的症结正是在于，对生产自始就不存在有意识的社会调节。”（《马克思恩格斯全集》第32卷（中文版），第542页）
-
-苏共纲领指出：“试图对资本主义经济实行国家调节，不能消除竞争和生产无政府状态，不能保证全社会的经济有计划的发展，因为生产的基础仍然是资本主义私有制和对雇佣劳动的剥削。”（《苏共纲领》，莫斯科，1976年（俄文版），第27页）
-
-因为生产资料的资本主义私有制是资本主义经济的基础，因为资本主义实质上是私营的，所以不可能对整个国民经济的发展实行科学的管理。在整个社会的科学管理系统之外，也不可能有对国民经济的计划。
-
-由于在资本主义制度下不可能对国民经济进行计划，单个垄断组织、公司也不可能有效地实现其计划。
-
-资本主义计划的实际内容就是对战略方面最重要的垄断组织和经济部门的发展实行国家调节和刺激。在发达的资本主义国家，经济计划是为强化对劳动者的剥削、巩固垄断组织的实力服务的。这就是资本主义不可调和的矛盾的新形式。
-
-与为垄断组织服务的调节经济的计划相反，发达资本主义国家的工人阶级在共产党和工人党的领导下，正提出符合人民群众利益的解决经济和社会问题的计划。
+    
+&emsp;&emsp;对国民经济进行计划在当代世界上很流行。第二次世界大战前，只有个别资本主义国家在经济危机时期，才对计划感兴趣。
+    
+&emsp;&emsp;战后，随着帝国主义的殖民主义体系的垮台，亚洲和非洲出现了许多获得自由的国家，他们把计划工作看成加速经济、文化和社会发展的可靠手段。
+    
+&emsp;&emsp;很多国家都建立了制定经济、文化中长期规划的全国性机关。发达的资本主义国家也对国家的经济进行规划。这一切都使这种所谓资本主义制度下能对国民经济进行计划的理论发展起来，包括“社会主义同资本主义接近”论、“调节的资本主义”论、“工业化后的社会”论以及其他等等，所有这些资产阶级计划的观点，都否认国民经济计划工作同主要生产资料的社会主义公有制、同社会主义国家的联系。
+    
+&emsp;&emsp;提出这些观点的人，以发达的资本主义国家对经济的发展进行预测和规划为根据，试图证明，只要制定若干方法和模型系统，使用电子计算机，资产阶级国家在不改变所有制关系的情况下也完全可以对国民经济进行计划，将能够管理国家经济的发展。但是，试图证明在资本主义制度下可以实行计划的观点，在理论上是不能成立的，实践上是徒劳无益的。
+    
+&emsp;&emsp;确实，在国家垄断资本主义条件下，在各发达的资本主义国家，由国家负担科学拨款以及原子能、反应堆技术和空间研究拨款的主要部分。运输、邮电、道路、能源供应、水的供应、下水道等的发展，在许多资本主义国家也完全掌握在国家手中。
+    
+&emsp;&emsp;资本主义国家把税收政策作为影响生产结构和发展速度的工具。折旧政策，对固定资本投资实行减税的政策，信贷政策等也为这一目的服务。
+    
+&emsp;&emsp;资产阶级国家对资本周转时间长的部门进行基本建设投资时，需要对这些投资进行长期计划。国家计划为政府和垄断资本家间建立业务上的联系奠定了基础。这些垄断资本家不但以有利的条件获得大量定货，而且获得很宝贵的经济情报，从中捞到不少好处。
+    
+&emsp;&emsp;但是，资本主义国家努力干预经济，扩大国家调节的范围，并不能克服资本主义本质上的缺陷和矛盾。
+    
+&emsp;&emsp;国家垄断资本主义的调节之所以是有限的，首先是因为建立在私有制基础之上的资本主义制度的本质没有改变。卡尔·马克思写道：“……资本主义经营本质上就是私人经营，即是由联合的资本家代替单个资本家，也是如此。”（《马克思恩格斯全集》第24卷（中文版），第272页）
+    
+&emsp;&emsp;资产阶级国家影响经济的可能性是有限的。资产阶级国家可以刺激基本建设投资，可以使用劳动人民的部分收入以及通过税收和公债提出的部分闲置资本来购买商品，从而在一定限度内促进经济的发展、繁荣、生产结构的改变、新部门的出现，但是资产阶级国家绝不可能对经济的发展产生什么决定性的影响。
+    
+&emsp;&emsp;国家垄断资本主义不能解决市场问题，在国家垄断资本主义条件下，生产和消费的对抗完全存在。调节和计划不能排除市场的自发性，也不能消除危机的经济基础。
+    
+&emsp;&emsp;资本主义不能够对社会生产进行有计划的调节。正如马克思所强调指出的：“资产阶级社会的症结正是在于，对生产自始就不存在有意识的社会调节。”（《马克思恩格斯全集》第32卷（中文版），第542页）
+    
+&emsp;&emsp;苏共纲领指出：“试图对资本主义经济实行国家调节，不能消除竞争和生产无政府状态，不能保证全社会的经济有计划的发展，因为生产的基础仍然是资本主义私有制和对雇佣劳动的剥削。”（《苏共纲领》，莫斯科，1976年（俄文版），第27页）
+    
+&emsp;&emsp;因为生产资料的资本主义私有制是资本主义经济的基础，因为资本主义实质上是私营的，所以不可能对整个国民经济的发展实行科学的管理。在整个社会的科学管理系统之外，也不可能有对国民经济的计划。
+    
+&emsp;&emsp;由于在资本主义制度下不可能对国民经济进行计划，单个垄断组织、公司也不可能有效地实现其计划。
+    
+&emsp;&emsp;资本主义计划的实际内容就是对战略方面最重要的垄断组织和经济部门的发展实行国家调节和刺激。在发达的资本主义国家，经济计划是为强化对劳动者的剥削、巩固垄断组织的实力服务的。这就是资本主义不可调和的矛盾的新形式。
+    
+&emsp;&emsp;与为垄断组织服务的调节经济的计划相反，发达资本主义国家的工人阶级在共产党和工人党的领导下，正提出符合人民群众利益的解决经济和社会问题的计划。
