--- a/markdown/苏联国民经济计划学07.md
+++ b/markdown/苏联国民经济计划学07.md
@@ -1,29 +1,29 @@
 <p align="right">苏联国民经济计划学（七）
-
+    
 ### <p align="center">第四节 预测和远景计划
+    
 
- 
-
-苏联和其他社会主义国家都很重视经济和社会进程的预测，很重视预测和远景计划的相互联系。
-
-对社会主义社会科学技术进步、经济和社会过程的预测，从一开始就同国民经济计划工作不可分割地联系在一起。国民经济发展的第一个总计划——国家电气化计划就已经明显地反映了这种联系。列宁在评价国家电气化计划时指出：这一计划全面考虑了科学和技术的进步。
-
-国家电气化的基础是，对经济恢复和在国家电气化基础上进行经济改造的预测。专家们在制定国家电气化计划时，不仅预测到二十年代和三十年代，而且预测到本世纪的后半叶。例如，对发展高压输电线路以建立统一的供电系统的预测就是这样。
-
-近年来科学技术、经济、社会预测方法得到了进一步的发展。现在制定科学预测并在远景计划中运用科学预测的问题变得特别迫切。苏联部长会议主席柯西金对苏联国家计委工作人员的讲话中谈到，计划是一门科学,它应当吸收全部科学技术成就和先进思想……对科学预测的讨论应当走在制定国民经济各部门发展计划的前面……。我们应当对每一个工业部门的发展进行科学预测，以便及时地为先进的、有发展前途的事物开辟道路，以便确定计划工作的方向。
-
-苏共中央和苏联部长会议于1968年9月24日通过了“关于提髙科研组织工作效率和在国民经济中加速利用科技成果的措施”的决议。决议规定，在制定国民经济远景计划和年度计划时，要广泛利用国内外最新的科学技术成就和先进经验。对于国民经济及各部门发展的重大问题，必须进行长期预测（10-15年或更长一些时间），应当根据预测选择技术进步发展方向，和发展国民经济及部门生产的有效的途径。
-
-决议确定了发展国民经济的重大项目，规定了为部门或共和国最重要问题制定长期科学技术预测和经济预测的程序。苏联科学技术委员会应当会同苏联科学院，在各部、主管部门、加盟共和国部长会议参加下，于五年计划编制之前，按科学技术发展的前景，根据对重大的国民经济问题进行的科学技术预测，制定关于科学技术发展基本方针的建议，制定需要在计划期内解决的主要科学技术项目。
-
-预测工作不能仅局限于掲示和预报客观过程。预测应当是有目的的，不论以何种形式，都应当包括一系列达到既定目标、改变国民经济现有比例、建立新的最优比例的建议。
-
-预测体系包括：人口预测（数量、结构、居民分布）；矿产及其他自然资源预测；科学技术发展预测；经济部门发展预测；生产力布局预测；提高人民生活水平预测；社会发展过程预测；国际政治与经济关系方面的预测。制定这样一个预测体系有着重要意义。
-
-预测与国民经济远景计划的区別不在于制定指标的详细程度，也不在于论证的深度。预测可以是运用最复杂计箅的结果。不能认为计划与预测的区别在于计划是由明确的、规定了县体执行者的任务组成的，而预测仅包括没有具体执行者的指标。国家电气化计划虽然包含的规定了具体执行者的任务很少，但完全有理由认为它是世界上有史以来第一个远景计划。
-
-区别国民经济发展计划与经济预测很重要的原则是，计划从来就是计划指导（管理）的工具，是管理决策的具体化，正因为如此，计划是指令，为国民经济的发展确定了方向。不赋予计划任务以普遍的约束力，而想使社会发展达到既定目标是不可能的。
-
-经济和文化方面计划任务的指令性，是由国家权力机关和国家管理机关确定的。国民经济计划之成为法律，不是在制定计划的时刻，而是在苏联最髙苏维埃会议批准之后。
-
-在生产、科学、技术的一切领域制定有科学根据的预测，这是编制国民经济发展计划（特别是长期计划）过程必不可少的一部分。首先它是计划前的一个阶段，这一阶段能在科学的基础上论证重大问题的方向和具体解决方案。在编制计划的过程中，为了确定计划完成的结果，也需要进行预测。
+    
+&emsp;&emsp;苏联和其他社会主义国家都很重视经济和社会进程的预测，很重视预测和远景计划的相互联系。
+    
+&emsp;&emsp;对社会主义社会科学技术进步、经济和社会过程的预测，从一开始就同国民经济计划工作不可分割地联系在一起。国民经济发展的第一个总计划——国家电气化计划就已经明显地反映了这种联系。列宁在评价国家电气化计划时指出：这一计划全面考虑了科学和技术的进步。
+    
+&emsp;&emsp;国家电气化的基础是，对经济恢复和在国家电气化基础上进行经济改造的预测。专家们在制定国家电气化计划时，不仅预测到二十年代和三十年代，而且预测到本世纪的后半叶。例如，对发展高压输电线路以建立统一的供电系统的预测就是这样。
+    
+&emsp;&emsp;近年来科学技术、经济、社会预测方法得到了进一步的发展。现在制定科学预测并在远景计划中运用科学预测的问题变得特别迫切。苏联部长会议主席柯西金对苏联国家计委工作人员的讲话中谈到，计划是一门科学,它应当吸收全部科学技术成就和先进思想……对科学预测的讨论应当走在制定国民经济各部门发展计划的前面……。我们应当对每一个工业部门的发展进行科学预测，以便及时地为先进的、有发展前途的事物开辟道路，以便确定计划工作的方向。
+    
+&emsp;&emsp;苏共中央和苏联部长会议于1968年9月24日通过了“关于提髙科研组织工作效率和在国民经济中加速利用科技成果的措施”的决议。决议规定，在制定国民经济远景计划和年度计划时，要广泛利用国内外最新的科学技术成就和先进经验。对于国民经济及各部门发展的重大问题，必须进行长期预测（10-15年或更长一些时间），应当根据预测选择技术进步发展方向，和发展国民经济及部门生产的有效的途径。
+    
+&emsp;&emsp;决议确定了发展国民经济的重大项目，规定了为部门或共和国最重要问题制定长期科学技术预测和经济预测的程序。苏联科学技术委员会应当会同苏联科学院，在各部、主管部门、加盟共和国部长会议参加下，于五年计划编制之前，按科学技术发展的前景，根据对重大的国民经济问题进行的科学技术预测，制定关于科学技术发展基本方针的建议，制定需要在计划期内解决的主要科学技术项目。
+    
+&emsp;&emsp;预测工作不能仅局限于掲示和预报客观过程。预测应当是有目的的，不论以何种形式，都应当包括一系列达到既定目标、改变国民经济现有比例、建立新的最优比例的建议。
+    
+&emsp;&emsp;预测体系包括：人口预测（数量、结构、居民分布）；矿产及其他自然资源预测；科学技术发展预测；经济部门发展预测；生产力布局预测；提高人民生活水平预测；社会发展过程预测；国际政治与经济关系方面的预测。制定这样一个预测体系有着重要意义。
+    
+&emsp;&emsp;预测与国民经济远景计划的区別不在于制定指标的详细程度，也不在于论证的深度。预测可以是运用最复杂计箅的结果。不能认为计划与预测的区别在于计划是由明确的、规定了县体执行者的任务组成的，而预测仅包括没有具体执行者的指标。国家电气化计划虽然包含的规定了具体执行者的任务很少，但完全有理由认为它是世界上有史以来第一个远景计划。
+    
+&emsp;&emsp;区别国民经济发展计划与经济预测很重要的原则是，计划从来就是计划指导（管理）的工具，是管理决策的具体化，正因为如此，计划是指令，为国民经济的发展确定了方向。不赋予计划任务以普遍的约束力，而想使社会发展达到既定目标是不可能的。
+    
+&emsp;&emsp;经济和文化方面计划任务的指令性，是由国家权力机关和国家管理机关确定的。国民经济计划之成为法律，不是在制定计划的时刻，而是在苏联最髙苏维埃会议批准之后。
+    
+&emsp;&emsp;在生产、科学、技术的一切领域制定有科学根据的预测，这是编制国民经济发展计划（特别是长期计划）过程必不可少的一部分。首先它是计划前的一个阶段，这一阶段能在科学的基础上论证重大问题的方向和具体解决方案。在编制计划的过程中，为了确定计划完成的结果，也需要进行预测。
