--- a/markdown/苏联国民经济计划学10.md
+++ b/markdown/苏联国民经济计划学10.md
@@ -1,185 +1,185 @@
 <p align="right">苏联国民经济计划学（十）
-
+    
 ### <p align="center">第七节 苏联国民经济计划方法论的发展
 
- 
 
-苏联经济和社会发展计划的方法论能达到今天这个水平，是六十多年来编制一系列国民经济计划实践的结果，是党和国家集体思想的结晶，是苏联经济学家在有计划地组织社会在生产过程方面的研究成果。
-
-在社会主义社会发展的每个阶段，国民经济计划方法论都有自己的特点和性质，都反映了生产力和社会关系发展的水平。
-
-国民经济计划方法论形成和发展的第一阶段包括从资本主义向社会主义过渡的时期，建立社会主义的时期（1917年11月至三十年代中期）。在这二十年里，我国制定了世界上第一个长期计划——国家电气化计划，进行了编制部门远景计划、国民经济发展控制数字、总计划的工作，制定和完成了第一、二两个五年计划。
-
-实际上国民经济计划方法论是在编制国家电气化计划期间形成的（1920年2月至12月）。列宁在这一时期对研究社会主义计划的理论方法论问题作出了重大贡献，他提出了一系列极其重要的国民经济计划理论原则。其中主要有：
-
-1.计划应当成为整个经济改造的纲领，应当保证经济和社会改造。
-
-2.计划应是统一的：所有的国民经济部门发展计划、所有的地区经济计划都应当协调统一。
-
-3.当前计划应当与远景计划紧密结合，因此，当前计划应当从远景计划的任务出发。
-
-4.计划应当规定在国民经济中形成社会主义建设必需的比例。
-
-5.计划的各个部分都应当进行技术经济论证，并彼此协调一致。
-
-6.计划应当规定合理配置生产力，改进地区劳动分工。
-
-列宁在致国家电气化委员会领导人、以后的苏联国家计委第一任主席Г·М·克林浪诺夫斯基的一系列信件中，揭示了制定国民经济计划的逻辑，其内容为：（1）细致考虑国家在计划期前拥有的所有资源；（2）确定计划期的社会需要，摸清为满足这一需要所必需的资源的数量和结构；（3）协调需要和资源。
-
-国家电气化委员会制定的计划包括10—15年的时间。这一计划具有下列方法论特点：
-
-1.体现了统一的国家长远计划的思想。
-
-2.有科学根据。计划是在考虑了世界和我国的科学技术成就的基础上制定的，广泛使用了预测（社会预测、科学技术预测、人口预测、经济预测等）
-
-3.党性原则。列宁把国家电气化计划称为“第二党纲”，舍此就不能实现党的目标和第一党纲。
-
-4.体现了提高生产效率、保证国民经济综合体主要生产部门最优比例的思想。
-
-5.体现了计划的统一和综合的思想（国家电气化——可以理解为建立当代大机器工业——处于每一地区生产规划的中心）。计划任务把17个部门、8个最重要的经济区的发展协调为一个统一体。
-
-6.在制定国家电气化计划各个部分计划时，广泛使用了物资和劳动力平衡表体系，其中包括燃料平衡表、金属和设备平衡表、建筑材料平衡表、劳动力资源形成和利用平衡表。国家电气化委员会制定的电气化财政平衡表具有很大意义。
-
-7.国家电气化计划划出八个大经济区：即北部区、中央工业区、南部区、伏尔加河沿岸区、乌拉尔区、西西伯利亚区、高加索区、土尔克斯坦区。
-
-国家电气化计划于1920年12月经苏维埃第八次代表大会同意，最后经苏维埃第九次代表大会（1921年）批准。计划规定的各项任务已于1931年提前完成。
-
-1921年2月成立的国家计划委员会，在形成和发展国民经济计划方法论过程中起了重大作用。
-
-国家计委的任务是：（1）编制统一的全国经济计划，及执行这一计划的方法和程序；（2）根据全国计划，按国民经济各专业审查和协调各主管部门、各地区（经济）组织的生产计划和设想，并确定工作的先后顺序；（3）为实行国家经济计划，制定必要的全国性措施以发展科学文化，组织调查研究，使用和培养需要的人材；（4）制定措施，宣传国民经济计划及实现的方法和相应地组织劳动的形式，使之家喻户晓。
-
-人民委员会1922年6月批准的国家计委条例，使国家计委的职能更具体化了。如国家计委应当从事编制两种主要的国民经济计划工作：即建立在电气化基础上的国民经济远景计划，和当年计划。条例规定，统一的计划应当包括全国经济的生产计划和整个国民经济调整计划。此外，统一的计划，不仅应当包括俄罗斯联邦共和国的经济，而且应当包括其他苏维埃共和国的经济。
-
-1922年12月成立的苏维埃社会主义共和国联盟，对社会主义社会的经济和社会发展计划工作起了极其重要的作用。它使建立统一的计划和计划机关体系成为可能。
-
-国家计委的成立，为各企业、各部门的计划同全国的工业计划、整个国民经济计划协调一致创造了必要的前提。
-
-第一个经济计划是1921/22年度的粮食计划。在1921-1922年，为大约28个工业部门编制了部门计划，然而由于质量很差，仅批准了三个部门（冶金、食糖、橡胶）的发展计划。在制定各工业部门发展年度计划的同时，计划机关还编制了金属工业、整个工业、农业、铁路运输、外贸、以及其他几个部门的五年远景计划。但是，这些计划也没被苏联国家计委主席团通过。这些计划的主要缺点是，第一，计划的目标同社会主义建设的利益不适应，这表现在五年计划的制定者们规定的资本主义和小商品经济成分的增长上。第二，降低了整个苏联经济的增长速度，编制这些计划犯有经验主义，方法也很原始。
-
-直到1924年，才第一次成功地制定了确定社会主义工业发展的综合年度工业计划。然后，又制定了国家工业部门1924/25年度综合的生产和财政计划。
-
-由于巩固了商品货币关系，改造了工业管理的组织形式和体制，经济生活普遍恢复，各部门积累了有计划组织经济的经验，所以不但可以制定出统一的国民经济年度计划，而且可以制定出远景计划。
-
-1925-1930年间国民经济年度综合计划是以控制数字的形式实行的。然而，国家计委编制的1925/26年度，1926/27年度，1927/28年度国民经济控制数字没有被政府通过。苏联国家计委和最高国民经济委员会最初几次制定五年综合计划的试验也没有成功。这些工作的主要缺点是：编制计划的人员对于自觉地确定国民经济各部门发展速度的作用估计不足；把计划的实质理解为对发展社会主义经济些可能途径的预测
-
-政府以控制数字批准的第一个国民经济年度计划，是国家计委制定的1928/29年度计划。在这个计划中首次提出了国家发展农业的综合措施。1929年顺利完成了编制第一个五年计划的工作。
-
-第一个五年计划（1928-1932年）是根据联共（布）第十五次代表大会（1927年12月）通过的“指示”制定的，1929年4-5月经第十六次党代表会议和第五次苏维埃代表大会同意和批准。
-
-第一个五年计划，发展了国家电气化计划的基本方针，使其更加具体化了。第一个五年计划有专门的部分说明农业、商业、教育、保健、住宅——文化建设的发展，有劳动计划、财政计划。国家电气化计划为17个工业部门提出了总的任务，而第一个五年计划却包括了约50个部门。第一个五年计划的最重要的优点之一是具体到制定了日计划，其中按年度分列了工农业总产值增长任务、新建和改建项目投产任务、国民经济各部门的基本建设投资任务。由于规定了各部门的产量和增长速度，就可以保证将它们的发展计划进行对比，对社会再生产（生产和分配、积累和消费）各方面进行协调。
-
-第一个五年计划的特点是，计划各部分和各项指标的论证都有更高的理论和方法论水平。计划根据马克思列宁主义扩大再生产理论的原则和公式，解决了速度和比例问题。在计划实践上，第一次对国民收入增长速度及其划分成积累和消费基金进行了有科学根据的计算。计划规定了先进的社会生产结构，规定优先发展第一部类各部门，特别是重工业部门，这都促进了五年计划主要任务——国家工业化的实现。
-
-在编制五年计划过程中广泛使用了平衡法。用动力平衡表、燃料平衡表、建筑材料和设备平衡表、谷物饲料平衡表、矿肥平衡表、经济作物平衡表等物资平衡表，建立了计划的实物比例体系。利用价值平衡表体系（国民收入的生产和分配平衡表、国民财富、城乡居民货币收支平衡表、基本建设投资拨款平衡表）确定了社会产品的价值结构、国民经济总的比例。国家计委试图建立的包括财政系统所有环节、国家全部财政资源的社会主义国家财政平衡表，起了很大的作用。第一个五年计划还提出了按年度划分任务的五年国家预算。国民经济平衡表体系，特别是物资平衡表体系的制定，是以大大改进了的定额为基础的。
-
-第一个五年计划的编制，是苏联经济和社会发展计划史上的一个里程碑。正如苏共中央“关于苏联国民经济发展第一个五年计划五十周年的决议”所指出的，第一个五年计划显示了社会主义制度较之资本主义制度的巨大优越性，证实了国民经济管理的崭新的彻底的民主形式和方法。党认为它的历史意义还在于，它为运用五年计划作为经济计划的基本形式奠定了基础，它把五年计划形式变成了共产主义建设的巨大组织力量和动员力量，从实际上证明了用社会主义方法管理经济比资本主义优越。
-
-从1930年春开始，批准了国家种植计划。计划就种植面积、社会主义农业企业的发展下达了指令性任务。
-
-1930—1932年进行了信贷改革，由此过渡到可以直接计划信贷和货币流通。
-
-由于有效地实行农业集体化和顺利完成第一个五年计划，从1931年开始，从控制数字过渡到经济发展的年度计划。
-
-第十七次党的代表会议（1932年2月）通过了编制1933-1937年第二个五年计划的指示。为了细致准备和科学论证第二个五年计划的具体问题和任务，国家计委于1932-1933年召开了24次加盟共和国科学技术代表会议和科学技术讨论会。国家计委同苏联科学院联席会议审查了那些重大的科学问题。
-
-第二个五年计划同第一个五年计划相比，科学论证计划任务的水平更高了。第二个五年计划包括的指标比第一个五年计划更广泛了，它已包括120个工业部门。
-
-第二个五年计划的指标包括整个工业部门，跟第一个五年计划样，还包括了最高国民经济委员会所属的企业（这些企业的产量约占工业总产量的60%）。
-
-在农业方面，第二个五年计划立足于发展社会主义成份，把增加集体农庄和国营农场生产的任务列进了计划。
-
-第二个五年计划的主要任务是完成对国民经济的技术改造。据此，计划规定了掌握新技术的措施，包括了广泛的技术经济指标（生产电气化、机械化、设备利用率等），同第一个五年计划相比，第二个五年计划的平衡论证水平更高了。制定第二个五年计划时，更广泛地釆用了物资、劳动、财政平衡表，使用了国民收入综合平衡表。
-
-第二个五年计划包括扩大科研机构、培训科技于部，编制最重大的科学研究问题的计划等方面的任务，对此不但按部门和人民委员会，而且按地区（共和国、边疆区和州）详细地进行编制。
-
-第二个五年计划期间，工厂内部的计划得到了进一步发展。各工厂开始制定技术、工业和财务计划。
-
-发展国民经济的第三个五年计划（1938-1942年）是第十八次党代表大会于1939年3月通过的。制定这一计划的方法有如下特点：坚持贯彻了发展技术进步和发展保证技术进步的部门的路线；规定建立后备体系（生产产品的后备能力，在国家东部地区建立第二座同样的企业，建立培训熟练工人的体系）。平衡法也得到了进一步的发展。
-
-计划的各项任务，都用一整套物资、价值、劳动计划平衡表作了论证。电力、黑色金属、燃料、设备（特别是稀缺设备：动力、化学等设备）等物资平衡表在这方面起了特别巨大的作用。在第三个五年计划期间，物资平衡表成了有计划地分配生产资料、使用主要工业品和食品的基础。编制国民经济统计和计划平衡表的工作在计划的平衡论证方面起了巨大作用。1939年制定的国民经济计划平衡模式，包括按整个国民经济、按各部门、按社会经济成份编制的社会产品平衡表、国民收入平衡表、固定基金平衡表、财政平衡表、劳动力平衡表，以及最重要的物资平衡表。第三个五年计划在方法论上的一个重要特点，是进行了设备更新、机器生产结构、原料、材料等的核算。
-
-社会主义国民经济计划体系在卫国战争中经受住了严峻的考验。
-
-为了集中全部物质资源以战胜敌人，卫国战争年代我国制定了战时经济计划。战争开始一周之后，政府通过了1941年第三季度国民经济动员计划。1941年8月批准了1941年第4季度和1942年伏尔加河沿岸地区、乌拉尔、西西伯利亚、哈萨克斯坦、中亚等地区战时经济计划。
-
-战争年代国家计委极为重视发展重工业的计划，包括远景计划。如，1943年国家计委准备了1943—1947年乌拉尔地区工业和交通运输发展计划，重点是发展冶金工业、燃料工业和发电站。1944年国家计委制定了1945-1946年黑色和有色冶金、煤炭、石油工业和发电站恢复和发展的远景计划。
-
-战争年代计划的方法论又有了新的发展，表现为：经济管理方面加强了集中，集中计划的产品品种大为增加（与战前相比，产品品名表增加了一倍多）；推广了按月分配的季度计划；制定了按平均月计划核算指标的方法；为保证节约资源，制定了确定平均先进定额水平的方法。战争年代继续制定了物资平衡表和生产能力平衡表，大大发展了检查计划完成情况的方法。
-
-卫国战争胜利结束后，国家计委制定了第四个五年计划——恢复国民经济计划（1946-1950年）。根据恢复国民经济的条件，扩大了集中分配的工业品的指标范围（从1946年的1637种扩大到1950年的3350种）。又恢复了年度计划。1947年2月14日政府批准了国家计委制定的附有简明方法指示的年度计划形式。恢复和发展了国民经济计划的总结性指标，列进了34个国民经济平衡核算表。在准备战后第一个五年计划时，首次制定了生产资料总平衡表和消费品总平衡表。从1948年开始，恢复了居民购买力基金计划，恢复了居民货币收支平衡表的编制。
-
-随着经济转入和平轨道，苏联国家计委不再负责制定月份作业计划，可以用更多的精力编制年度计划和远景计划，并检查计划完成情况。如，苏联国家计委着手制定了一些部门的长期远景发展计划（农村全盘电气化总计划、铁路运输15年发展目标以及其他计划）。
-
-在制定第五（1951-1955年）和第六（1956-1960年）两个五年计划过程中，又形成了一些新原则，使计划方法论又大大前进了一步。这些原则中首先是：制定国民经济计划应当从制定科学技术发展计划开始。国民经济平衡工作获得了大发展。从第五个五年计划开始，不仅制定了年度国民经济计划平衡表，而且制定了长期计划平衡表（1951-1955年、1956-1960年、1959-1965年）。从第六个五年计划起各加盟共和国计委也开始核算国民收入指标、居民实际收入指标，国民经济平衡表主要指标。
-
-第六个五年计划期间，苏联国家计委受权恢复制定总计划的工作。第六个五年计划执行到中间，由于科技进步的加快和利用科技进步可能性的扩大，也由于进行了重大的社会经济改造，必须提前制定新的长期计划。1959年1月苏共二十一大批准了关于国民经济发展七年计划（1959-1965年）的指标。
-
-五十年代末，苏联建成了发达的社会主义社会。苏共二十一大指出，社会主义在苏联已取得完全、彻底的胜利。
-
-苏共二十二大通过的党纲提出了建设共产主义物质技术基础的任务。社会主义社会的管理和国民经济计划的发展开始了一个新阶段——发达社会主义阶段。开始制定1961-1980年国民经济发展总计划，第八、九、十三个五年计划。
-
-通过制定远景总计划，丰富了国民经济计划方法论。总计划在平衡的内容和程序方面都与以前的同类计划有根本的不同。计划中不仅规定了整个远景计划到最后一年国家经济和文化的发展任务，而且规定了每个五年计划到最后一年的任务。
-
-远景总计划最重要的方法论特点首先是，尽管计划包罗万象，但在制定计划时实现了经济、社会、科学技术等方面的有机统一。在编制远景总计划过程中形成了一条原则：制定长期计划应当从制定经济一政治设想开始。
-
-根据党纲提出的建设共产主义物质技术基础的总任务，远景总计划规定在二十年内建成技术最发达、规模最强大的工业、农业、交通运输业，保证最高水平的劳动生产率。
-
-远景总计划的制定，向国家机关提出了制定长期预测体系的现实任务，以解决人口、经济、社会、科技等问题；同时还提出了制定国民经济长期预测平衡表的任务。并规定在社会生产两大部类发展速度接近的基础上，完善国民经济的生产结构和部门结构。通过编制远景总计划，从根本上丰富了解决提高人民生活水平问题的编制方法。首次制定了合理的消费预算、有科学根据的食品消费定额、非食用商品和服务的合理消费定额。这些定额规定，同世界上最发达的资本主义国家相比，提高苏联人民的生活水平，改善其消费结构。
-
-制定七年计划是一个试验，通过试验证明，五年的期限是中期计划的最优期限。苏共中央1965年9月全会决议强调，按年度划分任务的五年计划是国民经济计划的基本形式。全会规定了完善管理、完善计划和经济刺激的综合措施，为我国进行的经济改革奠定了基础。
-
-第八个五年计划期间，显著扩大了国家计划包括的经济部门和分部门的范围。1966-1970年的五年计划包括210个工业部门和分部门。计划中单列的新部门有：微生物工业、塑料制品工业、玻璃纤维材料工业、玻璃塑料工业。居民生活服务被首次单列为一个独立部门。
-
-论证国民经济计划的平衡表系统有了很大的发展。编制了1966-1970年部门间计划平衡表，这一平衡表作为试验，应用于制定计划的第二阶段。苏联国家计委制定了约三百种工业产品五年期间的物资平衡表。各加盟共和国制定的平衡表有：社会产品平衡表、国民收入平衡表、财政资源平衡表、居民货币收支平衡表、劳动平衡表、最重要产品的生产和消费平衡表。
-
-科学和技术进步的计划工作有了很大的发展。首次编制了1966-1970年国家科研工作五年计划。
-
-国家计委和科研机构为确定经济效果指标及其计算的方法，进行了大量的工作。
-
-为了提高远景计划的科学水平，更加强调制定整个国民经济、经济区、各经济部门发展的长期预测。
-
-把产品质量列入计划这也是新的内容。以实物表示的产品品名表中首次列出了最经济、最先进的工业产品品种。计划列了实现产品标准化的措施，还规定了生产荣获“国家质量标志”产品的任务。
-
-地区计划工作也有了很大的进步。首次在计划前阶段制定了各加盟共和国、各经济区发展模式。开始编制有科学根据的国民经济各部门发展和布局模型以及经济区发展模型，并作为苏联生产力布局总模型的组成部分。
-
-从第八个五年计划起开始制定了国家计划的社会部分，即提高人民生活水平综合计划。
-
-苏联国家计委于“八·五”计划末批准的“制定国民经济发展计划的方法指标”，对于提高研究社会需要和科技进步问题的科学水平起了重要作用。制定了社会生产效果重要指标的计算方法（按因素计算提高劳动生产率、生产费用的方法，以及生产能力利用水平的计算方法、产品质量分类指标体系等等），这是计划方法论发展的新的一步。为了保证各部门在计划中最充分地考虑生产后备，显著扩大了技术经济指标体系。在核算方法中，首次列入了计划人民生活水平、居民生活服务和外贸以及编制了部门间计划平衡表。
-
-1971年4月苏共二十四大批准了关于第九个五年计划（1971-1975年）的指示。第九个五年计划及其年度计划在计划方法论上有如下崭新的内容：特别单列了社会规划部份；制定了科技进步发展综合规划；制定了国民经济基本建设投资综合计划；制定了农业发展综合纲要。从第九个五年计划末开始，对全国和各地区的自然资源的保护和合理利用进行计划。
-
-根据苏共二十四大的决议，国家计委于1972年开展了制定到1990年的经济和社会发展长期计划的工作。
-
-制定总计划的方法论的良好基础，是到1990年苏联生产力发展和布局的总蓝图。图中说明现有的和将来的地区比例，各加盟共和国和经济区的自然资源，劳动力资源和劳动条件的分布、估价，及其利用前景，合理形成各加盟共和国和经济区经济的途径，等等。
-
-1974年公布了关于编制苏联国民经济发展计划的方法指示，根据这一指示着手编制第十个五年计划。
-
-第十个五年计划在方法论方面的新内容首先是：国民经济各级管理机关都要编制生产效果计划；制定了自然资源利用和自然保护远景计划；计划增加了新的部分——完善国民经济的管理；根据社会主义经济一体化综合规划来计划一体化的过程；扩大了社会规划（其中包括发展社会主义生活方式和改变社会结构方面的任务）。
-
-1976年8月召开的苏共二十五大通过了1976-1980年国民经济发展基本方针。
-
-苏联经济和社会发展到现阶段，对国民经济计划工作的要求更高了。勃列日涅夫在苏共中央十一月全会（1978年）上指出：新的任务要求新的解决办法，要求创造性地组织计划工作。只有在进一步完善社会主义社会发展计划工作的基础上才可能做到这一点。
-
-在成熟的社会主义条件下，完善苏联经济和社会发展计划方法论的最重要的方面是：
-
-在提高远景计划、首先是五年计划作用的条件下，建立统一的计划体系；
-
-计划中保证更充分地考虑社会需要的规模和结构，并在最有效地利用我国物力、人力、财力资源的情况下满这些需要；
-
-提高科学技术进步预测和社会经济过程预测的科学性，在制定苏联经济和社会发展计划过程中更广泛地使用预测；
-
-进一步发展计划方法，特别是平衡法和经济数学方法以及经济数学模型，并用这些方法来保证最优的国民经济比例和经济的均衡增长；
-
-推广制定国民经济规划和部门间规划，强调综合解决科学技术、经济和社会问题；
-
-把部门计划和地区计划更充分地结合起来；
-
-完善国民经济计划指标体系，强调指标要体现最终的国民经济效果；
-
-在跨部门经济合作和农工一体化的基础上，完善农业生产专业化和集中化的农工综合体的计划工作。
-
-苏共二十五大和随后的几次中央全会关于进一步完善国民经济计划和管理的决议，都体现在苏共中央“关于进一步完善经济机制和党政机关任务的决议”、苏共中央和苏联部长会议“关于改进计划工作和加强经济机制对提高生产效率和工作质量的影响的决议”中，这两个决议规定的一系列措施，都是为了进一步完善对经济的计划领导，在生产管理中发展民主原则，提高劳动集体的创造性主动性。
-
-计划的进一步完善在很大程度上是与国民经济各个环节的管理自动化系统的建立和运用相联系的。这是一个很大的很复杂的问题。要实现这一点，须和科研机关、计划管理部门多年地协同工作。
-
-谈到国民经济计划工作，首先应当涉及计划计算自动化系统，它是全国收集、处理信息自动化系统的中心环节。在计划工作中应用计划计算自动化系统，将给制定国民经济计划的组织工作和监督计划执行情况的工作带来根本变化，将能在更短时间内对国民经济计划作出多方案比较，并把各级所有计划指标进行综合协调，能选出整个计划以及计划各部分（分系统）的最优方案。为了有效地利用计划计算自动化系统，必须在计划中发展和应用经济数学方法和最新的电子计算技术、组织技术、通讯手段。随着计划计算自动化系统的应用，经济计划工作的创造性提高了，它要求研究行为机制和利用社会主义发展规律的机制，系统全面地研究社会需要、资源及其每一个计划期的切实保证问题，要完善计划工作方法，要把计划的经济方面、社会方面、部门方面和地区方面最合理地结合起来，要保证计划的继承性和连续性，要同经互会成员国共同做好计划工作，等等。
+    
+&emsp;&emsp;苏联经济和社会发展计划的方法论能达到今天这个水平，是六十多年来编制一系列国民经济计划实践的结果，是党和国家集体思想的结晶，是苏联经济学家在有计划地组织社会在生产过程方面的研究成果。
+    
+&emsp;&emsp;在社会主义社会发展的每个阶段，国民经济计划方法论都有自己的特点和性质，都反映了生产力和社会关系发展的水平。
+    
+&emsp;&emsp;国民经济计划方法论形成和发展的第一阶段包括从资本主义向社会主义过渡的时期，建立社会主义的时期（1917年11月至三十年代中期）。在这二十年里，我国制定了世界上第一个长期计划——国家电气化计划，进行了编制部门远景计划、国民经济发展控制数字、总计划的工作，制定和完成了第一、二两个五年计划。
+    
+&emsp;&emsp;实际上国民经济计划方法论是在编制国家电气化计划期间形成的（1920年2月至12月）。列宁在这一时期对研究社会主义计划的理论方法论问题作出了重大贡献，他提出了一系列极其重要的国民经济计划理论原则。其中主要有：
+    
+&emsp;&emsp;1.计划应当成为整个经济改造的纲领，应当保证经济和社会改造。
+    
+&emsp;&emsp;2.计划应是统一的：所有的国民经济部门发展计划、所有的地区经济计划都应当协调统一。
+    
+&emsp;&emsp;3.当前计划应当与远景计划紧密结合，因此，当前计划应当从远景计划的任务出发。
+    
+&emsp;&emsp;4.计划应当规定在国民经济中形成社会主义建设必需的比例。
+    
+&emsp;&emsp;5.计划的各个部分都应当进行技术经济论证，并彼此协调一致。
+    
+&emsp;&emsp;6.计划应当规定合理配置生产力，改进地区劳动分工。
+    
+&emsp;&emsp;列宁在致国家电气化委员会领导人、以后的苏联国家计委第一任主席Г·М·克林浪诺夫斯基的一系列信件中，揭示了制定国民经济计划的逻辑，其内容为：（1）细致考虑国家在计划期前拥有的所有资源；（2）确定计划期的社会需要，摸清为满足这一需要所必需的资源的数量和结构；（3）协调需要和资源。
+    
+&emsp;&emsp;国家电气化委员会制定的计划包括10—15年的时间。这一计划具有下列方法论特点：
+    
+&emsp;&emsp;1.体现了统一的国家长远计划的思想。
+    
+&emsp;&emsp;2.有科学根据。计划是在考虑了世界和我国的科学技术成就的基础上制定的，广泛使用了预测（社会预测、科学技术预测、人口预测、经济预测等）
+    
+&emsp;&emsp;3.党性原则。列宁把国家电气化计划称为“第二党纲”，舍此就不能实现党的目标和第一党纲。
+    
+&emsp;&emsp;4.体现了提高生产效率、保证国民经济综合体主要生产部门最优比例的思想。
+    
+&emsp;&emsp;5.体现了计划的统一和综合的思想（国家电气化——可以理解为建立当代大机器工业——处于每一地区生产规划的中心）。计划任务把17个部门、8个最重要的经济区的发展协调为一个统一体。
+    
+&emsp;&emsp;6.在制定国家电气化计划各个部分计划时，广泛使用了物资和劳动力平衡表体系，其中包括燃料平衡表、金属和设备平衡表、建筑材料平衡表、劳动力资源形成和利用平衡表。国家电气化委员会制定的电气化财政平衡表具有很大意义。
+    
+&emsp;&emsp;7.国家电气化计划划出八个大经济区：即北部区、中央工业区、南部区、伏尔加河沿岸区、乌拉尔区、西西伯利亚区、高加索区、土尔克斯坦区。
+    
+&emsp;&emsp;国家电气化计划于1920年12月经苏维埃第八次代表大会同意，最后经苏维埃第九次代表大会（1921年）批准。计划规定的各项任务已于1931年提前完成。
+    
+&emsp;&emsp;1921年2月成立的国家计划委员会，在形成和发展国民经济计划方法论过程中起了重大作用。
+    
+&emsp;&emsp;国家计委的任务是：（1）编制统一的全国经济计划，及执行这一计划的方法和程序；（2）根据全国计划，按国民经济各专业审查和协调各主管部门、各地区（经济）组织的生产计划和设想，并确定工作的先后顺序；（3）为实行国家经济计划，制定必要的全国性措施以发展科学文化，组织调查研究，使用和培养需要的人材；（4）制定措施，宣传国民经济计划及实现的方法和相应地组织劳动的形式，使之家喻户晓。
+    
+&emsp;&emsp;人民委员会1922年6月批准的国家计委条例，使国家计委的职能更具体化了。如国家计委应当从事编制两种主要的国民经济计划工作：即建立在电气化基础上的国民经济远景计划，和当年计划。条例规定，统一的计划应当包括全国经济的生产计划和整个国民经济调整计划。此外，统一的计划，不仅应当包括俄罗斯联邦共和国的经济，而且应当包括其他苏维埃共和国的经济。
+    
+&emsp;&emsp;1922年12月成立的苏维埃社会主义共和国联盟，对社会主义社会的经济和社会发展计划工作起了极其重要的作用。它使建立统一的计划和计划机关体系成为可能。
+    
+&emsp;&emsp;国家计委的成立，为各企业、各部门的计划同全国的工业计划、整个国民经济计划协调一致创造了必要的前提。
+    
+&emsp;&emsp;第一个经济计划是1921/22年度的粮食计划。在1921-1922年，为大约28个工业部门编制了部门计划，然而由于质量很差，仅批准了三个部门（冶金、食糖、橡胶）的发展计划。在制定各工业部门发展年度计划的同时，计划机关还编制了金属工业、整个工业、农业、铁路运输、外贸、以及其他几个部门的五年远景计划。但是，这些计划也没被苏联国家计委主席团通过。这些计划的主要缺点是，第一，计划的目标同社会主义建设的利益不适应，这表现在五年计划的制定者们规定的资本主义和小商品经济成分的增长上。第二，降低了整个苏联经济的增长速度，编制这些计划犯有经验主义，方法也很原始。
+    
+&emsp;&emsp;直到1924年，才第一次成功地制定了确定社会主义工业发展的综合年度工业计划。然后，又制定了国家工业部门1924/25年度综合的生产和财政计划。
+    
+&emsp;&emsp;由于巩固了商品货币关系，改造了工业管理的组织形式和体制，经济生活普遍恢复，各部门积累了有计划组织经济的经验，所以不但可以制定出统一的国民经济年度计划，而且可以制定出远景计划。
+    
+&emsp;&emsp;1925-1930年间国民经济年度综合计划是以控制数字的形式实行的。然而，国家计委编制的1925/26年度，1926/27年度，1927/28年度国民经济控制数字没有被政府通过。苏联国家计委和最高国民经济委员会最初几次制定五年综合计划的试验也没有成功。这些工作的主要缺点是：编制计划的人员对于自觉地确定国民经济各部门发展速度的作用估计不足；把计划的实质理解为对发展社会主义经济些可能途径的预测
+    
+&emsp;&emsp;政府以控制数字批准的第一个国民经济年度计划，是国家计委制定的1928/29年度计划。在这个计划中首次提出了国家发展农业的综合措施。1929年顺利完成了编制第一个五年计划的工作。
+    
+&emsp;&emsp;第一个五年计划（1928-1932年）是根据联共（布）第十五次代表大会（1927年12月）通过的“指示”制定的，1929年4-5月经第十六次党代表会议和第五次苏维埃代表大会同意和批准。
+    
+&emsp;&emsp;第一个五年计划，发展了国家电气化计划的基本方针，使其更加具体化了。第一个五年计划有专门的部分说明农业、商业、教育、保健、住宅——文化建设的发展，有劳动计划、财政计划。国家电气化计划为17个工业部门提出了总的任务，而第一个五年计划却包括了约50个部门。第一个五年计划的最重要的优点之一是具体到制定了日计划，其中按年度分列了工农业总产值增长任务、新建和改建项目投产任务、国民经济各部门的基本建设投资任务。由于规定了各部门的产量和增长速度，就可以保证将它们的发展计划进行对比，对社会再生产（生产和分配、积累和消费）各方面进行协调。
+    
+&emsp;&emsp;第一个五年计划的特点是，计划各部分和各项指标的论证都有更高的理论和方法论水平。计划根据马克思列宁主义扩大再生产理论的原则和公式，解决了速度和比例问题。在计划实践上，第一次对国民收入增长速度及其划分成积累和消费基金进行了有科学根据的计算。计划规定了先进的社会生产结构，规定优先发展第一部类各部门，特别是重工业部门，这都促进了五年计划主要任务——国家工业化的实现。
+    
+&emsp;&emsp;在编制五年计划过程中广泛使用了平衡法。用动力平衡表、燃料平衡表、建筑材料和设备平衡表、谷物饲料平衡表、矿肥平衡表、经济作物平衡表等物资平衡表，建立了计划的实物比例体系。利用价值平衡表体系（国民收入的生产和分配平衡表、国民财富、城乡居民货币收支平衡表、基本建设投资拨款平衡表）确定了社会产品的价值结构、国民经济总的比例。国家计委试图建立的包括财政系统所有环节、国家全部财政资源的社会主义国家财政平衡表，起了很大的作用。第一个五年计划还提出了按年度划分任务的五年国家预算。国民经济平衡表体系，特别是物资平衡表体系的制定，是以大大改进了的定额为基础的。
+    
+&emsp;&emsp;第一个五年计划的编制，是苏联经济和社会发展计划史上的一个里程碑。正如苏共中央“关于苏联国民经济发展第一个五年计划五十周年的决议”所指出的，第一个五年计划显示了社会主义制度较之资本主义制度的巨大优越性，证实了国民经济管理的崭新的彻底的民主形式和方法。党认为它的历史意义还在于，它为运用五年计划作为经济计划的基本形式奠定了基础，它把五年计划形式变成了共产主义建设的巨大组织力量和动员力量，从实际上证明了用社会主义方法管理经济比资本主义优越。
+    
+&emsp;&emsp;从1930年春开始，批准了国家种植计划。计划就种植面积、社会主义农业企业的发展下达了指令性任务。
+    
+&emsp;&emsp;1930—1932年进行了信贷改革，由此过渡到可以直接计划信贷和货币流通。
+    
+&emsp;&emsp;由于有效地实行农业集体化和顺利完成第一个五年计划，从1931年开始，从控制数字过渡到经济发展的年度计划。
+    
+&emsp;&emsp;第十七次党的代表会议（1932年2月）通过了编制1933-1937年第二个五年计划的指示。为了细致准备和科学论证第二个五年计划的具体问题和任务，国家计委于1932-1933年召开了24次加盟共和国科学技术代表会议和科学技术讨论会。国家计委同苏联科学院联席会议审查了那些重大的科学问题。
+    
+&emsp;&emsp;第二个五年计划同第一个五年计划相比，科学论证计划任务的水平更高了。第二个五年计划包括的指标比第一个五年计划更广泛了，它已包括120个工业部门。
+    
+&emsp;&emsp;第二个五年计划的指标包括整个工业部门，跟第一个五年计划样，还包括了最高国民经济委员会所属的企业（这些企业的产量约占工业总产量的60%）。
+    
+&emsp;&emsp;在农业方面，第二个五年计划立足于发展社会主义成份，把增加集体农庄和国营农场生产的任务列进了计划。
+    
+&emsp;&emsp;第二个五年计划的主要任务是完成对国民经济的技术改造。据此，计划规定了掌握新技术的措施，包括了广泛的技术经济指标（生产电气化、机械化、设备利用率等），同第一个五年计划相比，第二个五年计划的平衡论证水平更高了。制定第二个五年计划时，更广泛地釆用了物资、劳动、财政平衡表，使用了国民收入综合平衡表。
+    
+&emsp;&emsp;第二个五年计划包括扩大科研机构、培训科技于部，编制最重大的科学研究问题的计划等方面的任务，对此不但按部门和人民委员会，而且按地区（共和国、边疆区和州）详细地进行编制。
+    
+&emsp;&emsp;第二个五年计划期间，工厂内部的计划得到了进一步发展。各工厂开始制定技术、工业和财务计划。
+    
+&emsp;&emsp;发展国民经济的第三个五年计划（1938-1942年）是第十八次党代表大会于1939年3月通过的。制定这一计划的方法有如下特点：坚持贯彻了发展技术进步和发展保证技术进步的部门的路线；规定建立后备体系（生产产品的后备能力，在国家东部地区建立第二座同样的企业，建立培训熟练工人的体系）。平衡法也得到了进一步的发展。
+    
+&emsp;&emsp;计划的各项任务，都用一整套物资、价值、劳动计划平衡表作了论证。电力、黑色金属、燃料、设备（特别是稀缺设备：动力、化学等设备）等物资平衡表在这方面起了特别巨大的作用。在第三个五年计划期间，物资平衡表成了有计划地分配生产资料、使用主要工业品和食品的基础。编制国民经济统计和计划平衡表的工作在计划的平衡论证方面起了巨大作用。1939年制定的国民经济计划平衡模式，包括按整个国民经济、按各部门、按社会经济成份编制的社会产品平衡表、国民收入平衡表、固定基金平衡表、财政平衡表、劳动力平衡表，以及最重要的物资平衡表。第三个五年计划在方法论上的一个重要特点，是进行了设备更新、机器生产结构、原料、材料等的核算。
+    
+&emsp;&emsp;社会主义国民经济计划体系在卫国战争中经受住了严峻的考验。
+    
+&emsp;&emsp;为了集中全部物质资源以战胜敌人，卫国战争年代我国制定了战时经济计划。战争开始一周之后，政府通过了1941年第三季度国民经济动员计划。1941年8月批准了1941年第4季度和1942年伏尔加河沿岸地区、乌拉尔、西西伯利亚、哈萨克斯坦、中亚等地区战时经济计划。
+    
+&emsp;&emsp;战争年代国家计委极为重视发展重工业的计划，包括远景计划。如，1943年国家计委准备了1943—1947年乌拉尔地区工业和交通运输发展计划，重点是发展冶金工业、燃料工业和发电站。1944年国家计委制定了1945-1946年黑色和有色冶金、煤炭、石油工业和发电站恢复和发展的远景计划。
+    
+&emsp;&emsp;战争年代计划的方法论又有了新的发展，表现为：经济管理方面加强了集中，集中计划的产品品种大为增加（与战前相比，产品品名表增加了一倍多）；推广了按月分配的季度计划；制定了按平均月计划核算指标的方法；为保证节约资源，制定了确定平均先进定额水平的方法。战争年代继续制定了物资平衡表和生产能力平衡表，大大发展了检查计划完成情况的方法。
+    
+&emsp;&emsp;卫国战争胜利结束后，国家计委制定了第四个五年计划——恢复国民经济计划（1946-1950年）。根据恢复国民经济的条件，扩大了集中分配的工业品的指标范围（从1946年的1637种扩大到1950年的3350种）。又恢复了年度计划。1947年2月14日政府批准了国家计委制定的附有简明方法指示的年度计划形式。恢复和发展了国民经济计划的总结性指标，列进了34个国民经济平衡核算表。在准备战后第一个五年计划时，首次制定了生产资料总平衡表和消费品总平衡表。从1948年开始，恢复了居民购买力基金计划，恢复了居民货币收支平衡表的编制。
+    
+&emsp;&emsp;随着经济转入和平轨道，苏联国家计委不再负责制定月份作业计划，可以用更多的精力编制年度计划和远景计划，并检查计划完成情况。如，苏联国家计委着手制定了一些部门的长期远景发展计划（农村全盘电气化总计划、铁路运输15年发展目标以及其他计划）。
+    
+&emsp;&emsp;在制定第五（1951-1955年）和第六（1956-1960年）两个五年计划过程中，又形成了一些新原则，使计划方法论又大大前进了一步。这些原则中首先是：制定国民经济计划应当从制定科学技术发展计划开始。国民经济平衡工作获得了大发展。从第五个五年计划开始，不仅制定了年度国民经济计划平衡表，而且制定了长期计划平衡表（1951-1955年、1956-1960年、1959-1965年）。从第六个五年计划起各加盟共和国计委也开始核算国民收入指标、居民实际收入指标，国民经济平衡表主要指标。
+    
+&emsp;&emsp;第六个五年计划期间，苏联国家计委受权恢复制定总计划的工作。第六个五年计划执行到中间，由于科技进步的加快和利用科技进步可能性的扩大，也由于进行了重大的社会经济改造，必须提前制定新的长期计划。1959年1月苏共二十一大批准了关于国民经济发展七年计划（1959-1965年）的指标。
+    
+&emsp;&emsp;五十年代末，苏联建成了发达的社会主义社会。苏共二十一大指出，社会主义在苏联已取得完全、彻底的胜利。
+    
+&emsp;&emsp;苏共二十二大通过的党纲提出了建设共产主义物质技术基础的任务。社会主义社会的管理和国民经济计划的发展开始了一个新阶段——发达社会主义阶段。开始制定1961-1980年国民经济发展总计划，第八、九、十三个五年计划。
+    
+&emsp;&emsp;通过制定远景总计划，丰富了国民经济计划方法论。总计划在平衡的内容和程序方面都与以前的同类计划有根本的不同。计划中不仅规定了整个远景计划到最后一年国家经济和文化的发展任务，而且规定了每个五年计划到最后一年的任务。
+    
+&emsp;&emsp;远景总计划最重要的方法论特点首先是，尽管计划包罗万象，但在制定计划时实现了经济、社会、科学技术等方面的有机统一。在编制远景总计划过程中形成了一条原则：制定长期计划应当从制定经济一政治设想开始。
+    
+&emsp;&emsp;根据党纲提出的建设共产主义物质技术基础的总任务，远景总计划规定在二十年内建成技术最发达、规模最强大的工业、农业、交通运输业，保证最高水平的劳动生产率。
+    
+&emsp;&emsp;远景总计划的制定，向国家机关提出了制定长期预测体系的现实任务，以解决人口、经济、社会、科技等问题；同时还提出了制定国民经济长期预测平衡表的任务。并规定在社会生产两大部类发展速度接近的基础上，完善国民经济的生产结构和部门结构。通过编制远景总计划，从根本上丰富了解决提高人民生活水平问题的编制方法。首次制定了合理的消费预算、有科学根据的食品消费定额、非食用商品和服务的合理消费定额。这些定额规定，同世界上最发达的资本主义国家相比，提高苏联人民的生活水平，改善其消费结构。
+    
+&emsp;&emsp;制定七年计划是一个试验，通过试验证明，五年的期限是中期计划的最优期限。苏共中央1965年9月全会决议强调，按年度划分任务的五年计划是国民经济计划的基本形式。全会规定了完善管理、完善计划和经济刺激的综合措施，为我国进行的经济改革奠定了基础。
+    
+&emsp;&emsp;第八个五年计划期间，显著扩大了国家计划包括的经济部门和分部门的范围。1966-1970年的五年计划包括210个工业部门和分部门。计划中单列的新部门有：微生物工业、塑料制品工业、玻璃纤维材料工业、玻璃塑料工业。居民生活服务被首次单列为一个独立部门。
+    
+&emsp;&emsp;论证国民经济计划的平衡表系统有了很大的发展。编制了1966-1970年部门间计划平衡表，这一平衡表作为试验，应用于制定计划的第二阶段。苏联国家计委制定了约三百种工业产品五年期间的物资平衡表。各加盟共和国制定的平衡表有：社会产品平衡表、国民收入平衡表、财政资源平衡表、居民货币收支平衡表、劳动平衡表、最重要产品的生产和消费平衡表。
+    
+&emsp;&emsp;科学和技术进步的计划工作有了很大的发展。首次编制了1966-1970年国家科研工作五年计划。
+    
+&emsp;&emsp;国家计委和科研机构为确定经济效果指标及其计算的方法，进行了大量的工作。
+    
+&emsp;&emsp;为了提高远景计划的科学水平，更加强调制定整个国民经济、经济区、各经济部门发展的长期预测。
+    
+&emsp;&emsp;把产品质量列入计划这也是新的内容。以实物表示的产品品名表中首次列出了最经济、最先进的工业产品品种。计划列了实现产品标准化的措施，还规定了生产荣获“国家质量标志”产品的任务。
+    
+&emsp;&emsp;地区计划工作也有了很大的进步。首次在计划前阶段制定了各加盟共和国、各经济区发展模式。开始编制有科学根据的国民经济各部门发展和布局模型以及经济区发展模型，并作为苏联生产力布局总模型的组成部分。
+    
+&emsp;&emsp;从第八个五年计划起开始制定了国家计划的社会部分，即提高人民生活水平综合计划。
+    
+&emsp;&emsp;苏联国家计委于“八·五”计划末批准的“制定国民经济发展计划的方法指标”，对于提高研究社会需要和科技进步问题的科学水平起了重要作用。制定了社会生产效果重要指标的计算方法（按因素计算提高劳动生产率、生产费用的方法，以及生产能力利用水平的计算方法、产品质量分类指标体系等等），这是计划方法论发展的新的一步。为了保证各部门在计划中最充分地考虑生产后备，显著扩大了技术经济指标体系。在核算方法中，首次列入了计划人民生活水平、居民生活服务和外贸以及编制了部门间计划平衡表。
+    
+&emsp;&emsp;1971年4月苏共二十四大批准了关于第九个五年计划（1971-1975年）的指示。第九个五年计划及其年度计划在计划方法论上有如下崭新的内容：特别单列了社会规划部份；制定了科技进步发展综合规划；制定了国民经济基本建设投资综合计划；制定了农业发展综合纲要。从第九个五年计划末开始，对全国和各地区的自然资源的保护和合理利用进行计划。
+    
+&emsp;&emsp;根据苏共二十四大的决议，国家计委于1972年开展了制定到1990年的经济和社会发展长期计划的工作。
+    
+&emsp;&emsp;制定总计划的方法论的良好基础，是到1990年苏联生产力发展和布局的总蓝图。图中说明现有的和将来的地区比例，各加盟共和国和经济区的自然资源，劳动力资源和劳动条件的分布、估价，及其利用前景，合理形成各加盟共和国和经济区经济的途径，等等。
+    
+&emsp;&emsp;1974年公布了关于编制苏联国民经济发展计划的方法指示，根据这一指示着手编制第十个五年计划。
+    
+&emsp;&emsp;第十个五年计划在方法论方面的新内容首先是：国民经济各级管理机关都要编制生产效果计划；制定了自然资源利用和自然保护远景计划；计划增加了新的部分——完善国民经济的管理；根据社会主义经济一体化综合规划来计划一体化的过程；扩大了社会规划（其中包括发展社会主义生活方式和改变社会结构方面的任务）。
+    
+&emsp;&emsp;1976年8月召开的苏共二十五大通过了1976-1980年国民经济发展基本方针。
+    
+&emsp;&emsp;苏联经济和社会发展到现阶段，对国民经济计划工作的要求更高了。勃列日涅夫在苏共中央十一月全会（1978年）上指出：新的任务要求新的解决办法，要求创造性地组织计划工作。只有在进一步完善社会主义社会发展计划工作的基础上才可能做到这一点。
+    
+&emsp;&emsp;在成熟的社会主义条件下，完善苏联经济和社会发展计划方法论的最重要的方面是：
+    
+&emsp;&emsp;在提高远景计划、首先是五年计划作用的条件下，建立统一的计划体系；
+    
+&emsp;&emsp;计划中保证更充分地考虑社会需要的规模和结构，并在最有效地利用我国物力、人力、财力资源的情况下满这些需要；
+    
+&emsp;&emsp;提高科学技术进步预测和社会经济过程预测的科学性，在制定苏联经济和社会发展计划过程中更广泛地使用预测；
+    
+&emsp;&emsp;进一步发展计划方法，特别是平衡法和经济数学方法以及经济数学模型，并用这些方法来保证最优的国民经济比例和经济的均衡增长；
+    
+&emsp;&emsp;推广制定国民经济规划和部门间规划，强调综合解决科学技术、经济和社会问题；
+    
+&emsp;&emsp;把部门计划和地区计划更充分地结合起来；
+    
+&emsp;&emsp;完善国民经济计划指标体系，强调指标要体现最终的国民经济效果；
+    
+&emsp;&emsp;在跨部门经济合作和农工一体化的基础上，完善农业生产专业化和集中化的农工综合体的计划工作。
+    
+&emsp;&emsp;苏共二十五大和随后的几次中央全会关于进一步完善国民经济计划和管理的决议，都体现在苏共中央“关于进一步完善经济机制和党政机关任务的决议”、苏共中央和苏联部长会议“关于改进计划工作和加强经济机制对提高生产效率和工作质量的影响的决议”中，这两个决议规定的一系列措施，都是为了进一步完善对经济的计划领导，在生产管理中发展民主原则，提高劳动集体的创造性主动性。
+    
+&emsp;&emsp;计划的进一步完善在很大程度上是与国民经济各个环节的管理自动化系统的建立和运用相联系的。这是一个很大的很复杂的问题。要实现这一点，须和科研机关、计划管理部门多年地协同工作。
+    
+&emsp;&emsp;谈到国民经济计划工作，首先应当涉及计划计算自动化系统，它是全国收集、处理信息自动化系统的中心环节。在计划工作中应用计划计算自动化系统，将给制定国民经济计划的组织工作和监督计划执行情况的工作带来根本变化，将能在更短时间内对国民经济计划作出多方案比较，并把各级所有计划指标进行综合协调，能选出整个计划以及计划各部分（分系统）的最优方案。为了有效地利用计划计算自动化系统，必须在计划中发展和应用经济数学方法和最新的电子计算技术、组织技术、通讯手段。随着计划计算自动化系统的应用，经济计划工作的创造性提高了，它要求研究行为机制和利用社会主义发展规律的机制，系统全面地研究社会需要、资源及其每一个计划期的切实保证问题，要完善计划工作方法，要把计划的经济方面、社会方面、部门方面和地区方面最合理地结合起来，要保证计划的继承性和连续性，要同经互会成员国共同做好计划工作，等等。
